# kira-spatial

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  error.rs  feature_slice.rs  image_render.rs  main.rs
src/pipeline/: grid.rs  load.rs  mod.rs  render.rs  signal.rs
