[package]
name = "kira-spatial"
description = "Deterministic orchestrator for spatial transcriptomics: IO, field transforms, core math, and 3D export."
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/ARyaskov/kira-spatial"
keywords = [
    "bioinformatics",
    "spatial",
    "transcriptomics",
    "visium",
    "oncology"
]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
    "command-line-utilities"
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitvec = "1"
hdf5 = "0.8"
memmap2 = "0.9"
rayon = "1"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
kira-spatial-io = { version = "0.1", features = ["parquet"] }
kira-spatial-field = "0.1"
kira-spatial-core = "0.1"
kira-spatial-3d = "0.1"
